# Coursera-Data-Mining

./: README.html  README.md  line_chart.html
1 Data Visualization/: Programming-Assignment-1-Submission.Rmd  Programming-Assignment-1-Submission.html  Programming-Assignment-2-Submission.html
1 Data Visualization/Quiz/: quiz-w1.R  quiz-w4.Rmd  quiz-w4.html
1 Data Visualization/data/: football_edit.gml
1 Data Visualization/figure/: datatable1b-1.html  datatable2b-1.html  line-1a-1.html  line-1b-1.html  line-1c-1.html  line-2b-1.html  project-files-1.html
2 Text Retrieval and Search Engines/Assignment_1/: ranking-experiment.cpp  relevance-judgements.cpp
2 Text Retrieval and Search Engines/quiz/: Week 1 Quiz.docx  Week 2 Practice Quiz.docx  Week 2 Quiz.docx  Week 3 Practice Quiz.docx  Week 3 Quiz.docx  (+2 more)
3 Text Mining and Analytics/: Honors-Programming-Assignment.Rmd  Honors-Programming-Assignment.html
4 Pattern Discovery in Data Mining/: Programming Assignment - Frequent Itemset Mining Using Apriori.Rmd  Programming_Assignment_-_Frequent_Itemset_Mining_Using_Apriori.html
Data Visualization/: Programming-Assignment-1-Submission.Rmd  Programming-Assignment-1-Submission.html  Programming-Assignment-2-Submission.Rmd
Text Retrieval and Search Engines/: Programming-Assignment-1-Submission.Rmd  skeleton.bib
Text Retrieval and Search Engines/Assignment_1/: CMakeLists.txt  analyze.cpp  config.toml  setup.sh
Text Retrieval and Search Engines/Assignment_1/Assignment1/: submit.py
Text Retrieval and Search Engines/Assignment_1/perceptron-tagger/: label.mapping
(+76 files in other folders)
